Reduced the size of the 'other' tab to prevent text clipping, added a period after 'bioRxiv' in the DNAmod citation, and italicized journal names in references.

--- a/DNA_mod_site/static/css/psd3.css
+++ b/DNA_mod_site/static/css/psd3.css
@@ -1,6 +1,6 @@
 text {
     font-family: sans-serif;
-    font-size: 0.75em;
+    font-size: 0.65em;
     pointer-events: none;
 }
 
